# bootseq_dj

./: .gitignore  README.md  pyproject.toml
bootseq_dj/: __init__.py  apps.py  autodiscover.py  runner.py
bootseq_dj/management/commands/: boot.py
tests/: test_autodiscover.py
